# tarea1nlp

./: pyproject.toml
Código/: script.ipynb
